# adventofcode

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
2023/1/: code.py
2023/10/: code.py
2023/11/: code.py
2023/12/: code.py  statement.html
2023/13/: code.py
2023/14/: code.py
2023/15/: code.py
2023/16/: code.py
2023/17/: code.py
2023/18/: code.py
2023/19/: code.py  statement.html
2023/2/: code.py
2023/20/: code.py  statement.html
2023/21/: code.py
2023/22/: code.py  statement.html
2023/23/: code.py  statement.html
2023/24/: code.py
2023/3/: code.py
2023/4/: code.py
2023/5/: code.py
2023/6/: code.py
2023/7/: code.py
2023/8/: code.py
2023/9/: code.py
2024/1/: code.py
2024/2/: code.py
2024/3/: code.py  statement.html
2024/4/: code.py  statement.html
2024/5/: code.py
2024/6/: code.py  statement.html
2024/7/: code.py  statement.html
2024/8/: code.py  statement.html
2024/9/: code.py  statement.html
scripts/: init.py  runner.py
